<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".signin.SigninActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/describe_password"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_description">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:hint="@string/describe_phone"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:prefixText="@string/tm_phone"
            app:prefixTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomTextInputEdittext"
                android:id="@+id/entry_number"
                android:maxLength="8"
                android:padding="10dp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wrong_phone_number"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:visibility="invisible"
            android:text="@string/wrong_phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/number_field">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox"
            android:button="@null"
            android:stateListAnimator="@animator/scale"
            android:drawableEnd="@drawable/custom_checkbox"
            android:gravity="end|center"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:autoLink="web"
            android:linksClickable="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/checkText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/privacy_text"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resume"
        style="@style/Widget.MaterialComponents.Button"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_field" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>