<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close_styled"/>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/ic_circle_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_outline_photo_camera_24" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_layout"
        app:layout_constraintStart_toEndOf="@+id/profile_image_layout"
        app:layout_constraintTop_toTopOf="@+id/profile_image_layout">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Ulanyjy"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Person"
            android:textSize="15sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_layout">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/CustomTextInputLayout"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/describe_user"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entry_user"
                style="@style/CustomTextInputEdittext"
                android:padding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            style="@style/CustomTextInputLayout"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/describe_phone"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entry_number"
                style="@style/CustomTextInputEdittext"
                android:padding="10dp"
                android:enabled="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/region_layout"
            style="@style/CustomTextInputLayout"
            android:hint="@string/describe_region"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_arrow_down_24"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/region_name"
                style="@style/CustomTextInputEdittext"
                android:padding="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        android:textAllCaps="false"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_details" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        android:layout_marginTop="12dp"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/action_log_out"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />


</androidx.constraintlayout.widget.ConstraintLayout>